--- a/templates/interface.html
+++ b/templates/interface.html
@@ -19,132 +19,141 @@
         <div id="left-bar">
             <div>
                 <h4>Lumber Hut</h4>
-                <p>Small hut that produces wood.</p>
+                <p>Produces 50 wood a week</p>
+                <p>Costs 50 wood to build</p>
                 <button id="buildLumberBtn">Build</button>
             </div>
             <div>
                 <h4>Quarry</h4>
-                <p>An encampment that collects stone from the earth.</p>
+                <p>Produces stone a week</p>
+                <p>Costs 125 wood to build</p>
                 <button id="buildQuarryBtn">Build</button>
             </div>
             <div>
                 <h4>Farm</h4>
-                <p>A field of crops that regularly produce food.</p>
+                <p>Produces food a week</p>
+                <p>Costs 100 wood to build</p>
                 <button id="buildFarmBtn">Build</button>
             </div>
             <div>
                 <h4>Logging Co.</h4>
-                <p>A larger, more organized setup of wood collectors.</p>
+                <p>Produces wood a week</p>
+                <p>Costs 700 stone to build</p>
                 <button id="buildLoggingBtn">Build</button>
             </div>
             <div>
                 <h4>Pasture</h4>
-                <p>A pasture full of livestock that produces large amounts of food.</p>
+                <p>Produces food a week</p>
+                <p>Cost 500 stone and 200 food to build</p>
                 <button id="buildPastureBtn">Build</button>
             </div>
         </div>
         <div id="grid-map">
-            <div class="gridSpaces" id="1-1">1</div>
-            <div class="gridSpaces" id="1-2">2</div>
-            <div class="gridSpaces" id="1-3">3</div>
-            <div class="gridSpaces" id="1-4">4</div>
-            <div class="gridSpaces" id="1-5">5</div>
-            <div class="gridSpaces" id="1-6">6</div>
-            <div class="gridSpaces" id="1-7">7</div>
-            <div class="gridSpaces" id="1-8">8</div>
-            <div class="gridSpaces" id="1-9">9</div>
-            <div class="gridSpaces" id="1-10">10</div>
-            <div class="gridSpaces" id="1-11">11</div>
-            <div class="gridSpaces" id="1-12">12</div>
-            <div class="gridSpaces" id="2-1">1</div>
-            <div class="gridSpaces" id="2-2">2</div>
-            <div class="gridSpaces" id="2-3">3</div>
-            <div class="gridSpaces" id="2-4">4</div>
-            <div class="gridSpaces" id="2-5">5</div>
-            <div class="gridSpaces" id="2-6">6</div>
-            <div class="gridSpaces" id="2-7">7</div>
-            <div class="gridSpaces" id="2-8">8</div>
-            <div class="gridSpaces" id="2-9">9</div>
-            <div class="gridSpaces" id="2-10">10</div>
-            <div class="gridSpaces" id="2-11">11</div>
-            <div class="gridSpaces" id="2-12">12</div>
-            <div class="gridSpaces" id="3-1">1</div>
-            <div class="gridSpaces" id="3-2">2</div>
-            <div class="gridSpaces" id="3-3">3</div>
-            <div class="gridSpaces" id="3-4">4</div>
-            <div class="gridSpaces" id="3-5">5</div>
-            <div class="gridSpaces" id="3-6">6</div>
-            <div class="gridSpaces" id="3-7">7</div>
-            <div class="gridSpaces" id="3-8">8</div>
-            <div class="gridSpaces" id="3-9">9</div>
-            <div class="gridSpaces" id="3-10">10</div>
-            <div class="gridSpaces" id="3-11">11</div>
-            <div class="gridSpaces" id="3-12">12</div>
-            <div class="gridSpaces" id="4-1">1</div>
-            <div class="gridSpaces" id="4-2">2</div>
-            <div class="gridSpaces" id="4-3">3</div>
-            <div class="gridSpaces" id="4-4">4</div>
-            <div class="gridSpaces" id="4-5">5</div>
-            <div class="gridSpaces" id="4-6">6</div>
-            <div class="gridSpaces" id="4-7">7</div>
-            <div class="gridSpaces" id="4-8">8</div>
-            <div class="gridSpaces" id="4-9">9</div>
-            <div class="gridSpaces" id="4-10">10</div>
-            <div class="gridSpaces" id="4-11">11</div>
-            <div class="gridSpaces" id="4-12">12</div>
-            <div class="gridSpaces" id="5-1">1</div>
-            <div class="gridSpaces" id="5-2">2</div>
-            <div class="gridSpaces" id="5-3">3</div>
-            <div class="gridSpaces" id="5-4">4</div>
-            <div class="gridSpaces" id="5-5">5</div>
-            <div class="gridSpaces" id="5-6">6</div>
-            <div class="gridSpaces" id="5-7">7</div>
-            <div class="gridSpaces" id="5-8">8</div>
-            <div class="gridSpaces" id="5-9">9</div>
-            <div class="gridSpaces" id="5-10">10</div>
-            <div class="gridSpaces" id="5-11">11</div>
-            <div class="gridSpaces" id="5-12">12</div>
-            <div class="gridSpaces" id="6-1">1</div>
-            <div class="gridSpaces" id="6-2">2</div>
-            <div class="gridSpaces" id="6-3">3</div>
-            <div class="gridSpaces" id="6-4">4</div>
-            <div class="gridSpaces" id="6-5">5</div>
-            <div class="gridSpaces" id="6-6">6</div>
-            <div class="gridSpaces" id="6-7">7</div>
-            <div class="gridSpaces" id="6-8">8</div>
-            <div class="gridSpaces" id="6-9">9</div>
-            <div class="gridSpaces" id="6-10">10</div>
-            <div class="gridSpaces" id="6-11">11</div>
-            <div class="gridSpaces" id="6-12">12</div>
-            <div class="gridSpaces" id="7-1">1</div>
-            <div class="gridSpaces" id="7-2">2</div>
-            <div class="gridSpaces" id="7-3">3</div>
-            <div class="gridSpaces" id="7-4">4</div>
-            <div class="gridSpaces" id="7-5">5</div>
-            <div class="gridSpaces" id="7-6">6</div>
-            <div class="gridSpaces" id="7-7">7</div>
-            <div class="gridSpaces" id="7-8">8</div>
-            <div class="gridSpaces" id="7-9">9</div>
-            <div class="gridSpaces" id="7-10">10</div>
-            <div class="gridSpaces" id="7-11">11</div>
-            <div class="gridSpaces" id="7-12">12</div>
-            <div class="gridSpaces" id="8-1">1</div>
-            <div class="gridSpaces" id="8-2">2</div>
-            <div class="gridSpaces" id="8-3">3</div>
-            <div class="gridSpaces" id="8-4">4</div>
-            <div class="gridSpaces" id="8-5">5</div>
-            <div class="gridSpaces" id="8-6">6</div>
-            <div class="gridSpaces" id="8-7">7</div>
-            <div class="gridSpaces" id="8-8">8</div>
-            <div class="gridSpaces" id="8-9">9</div>
-            <div class="gridSpaces" id="8-10">10</div>
-            <div class="gridSpaces" id="8-11">11</div>
-            <div class="gridSpaces" id="8-12">12</div>
+            <div class="gridSpaces" id="1-1"></div>
+            <div class="gridSpaces" id="1-2"></div>
+            <div class="gridSpaces" id="1-3"></div>
+            <div class="gridSpaces" id="1-4"></div>
+            <div class="gridSpaces" id="1-5"></div>
+            <div class="gridSpaces" id="1-6"></div>
+            <div class="gridSpaces" id="1-7"></div>
+            <div class="gridSpaces" id="1-8"></div>
+            <div class="gridSpaces" id="1-9"></div>
+            <div class="gridSpaces" id="1-10"></div>
+            <div class="gridSpaces" id="1-11"></div>
+            <div class="gridSpaces" id="1-12"></div>
+            <div class="gridSpaces" id="2-1"></div>
+            <div class="gridSpaces" id="2-2"></div>
+            <div class="gridSpaces" id="2-3"></div>
+            <div class="gridSpaces" id="2-4"></div>
+            <div class="gridSpaces" id="2-5"></div>
+            <div class="gridSpaces" id="2-6"></div>
+            <div class="gridSpaces" id="2-7"></div>
+            <div class="gridSpaces" id="2-8"></div>
+            <div class="gridSpaces" id="2-9"></div>
+            <div class="gridSpaces" id="2-10"></div>
+            <div class="gridSpaces" id="2-11"></div>
+            <div class="gridSpaces" id="2-12"></div>
+            <div class="gridSpaces" id="3-1"></div>
+            <div class="gridSpaces" id="3-2"></div>
+            <div class="gridSpaces" id="3-3"></div>
+            <div class="gridSpaces" id="3-4"></div>
+            <div class="gridSpaces" id="3-5"></div>
+            <div class="gridSpaces" id="3-6"></div>
+            <div class="gridSpaces" id="3-7"></div>
+            <div class="gridSpaces" id="3-8"></div>
+            <div class="gridSpaces" id="3-9"></div>
+            <div class="gridSpaces" id="3-10"></div>
+            <div class="gridSpaces" id="3-11"></div>
+            <div class="gridSpaces" id="3-12"></div>
+            <div class="gridSpaces" id="4-1"></div>
+            <div class="gridSpaces" id="4-2"></div>
+            <div class="gridSpaces" id="4-3"></div>
+            <div class="gridSpaces" id="4-4"></div>
+            <div class="gridSpaces" id="4-5"></div>
+            <div class="gridSpaces" id="4-6"></div>
+            <div class="gridSpaces" id="4-7"></div>
+            <div class="gridSpaces" id="4-8"></div>
+            <div class="gridSpaces" id="4-9"></div>
+            <div class="gridSpaces" id="4-10"></div>
+            <div class="gridSpaces" id="4-11"></div>
+            <div class="gridSpaces" id="4-12"></div>
+            <div class="gridSpaces" id="5-1"></div>
+            <div class="gridSpaces" id="5-2"></div>
+            <div class="gridSpaces" id="5-3"></div>
+            <div class="gridSpaces" id="5-4"></div>
+            <div class="gridSpaces" id="5-5"></div>
+            <div class="gridSpaces" id="5-6"></div>
+            <div class="gridSpaces" id="5-7"></div>
+            <div class="gridSpaces" id="5-8"></div>
+            <div class="gridSpaces" id="5-9"></div>
+            <div class="gridSpaces" id="5-10"></div>
+            <div class="gridSpaces" id="5-11"></div>
+            <div class="gridSpaces" id="5-12"></div>
+            <div class="gridSpaces" id="6-1"></div>
+            <div class="gridSpaces" id="6-2"></div>
+            <div class="gridSpaces" id="6-3"></div>
+            <div class="gridSpaces" id="6-4"></div>
+            <div class="gridSpaces" id="6-5"></div>
+            <div class="gridSpaces" id="6-6"></div>
+            <div class="gridSpaces" id="6-7"></div>
+            <div class="gridSpaces" id="6-8"></div>
+            <div class="gridSpaces" id="6-9"></div>
+            <div class="gridSpaces" id="6-10"></div>
+            <div class="gridSpaces" id="6-11"></div>
+            <div class="gridSpaces" id="6-12"></div>
+            <div class="gridSpaces" id="7-1"></div>
+            <div class="gridSpaces" id="7-2"></div>
+            <div class="gridSpaces" id="7-3"></div>
+            <div class="gridSpaces" id="7-4"></div>
+            <div class="gridSpaces" id="7-5"></div>
+            <div class="gridSpaces" id="7-6"></div>
+            <div class="gridSpaces" id="7-7"></div>
+            <div class="gridSpaces" id="7-8"></div>
+            <div class="gridSpaces" id="7-9"></div>
+            <div class="gridSpaces" id="7-10"></div>
+            <div class="gridSpaces" id="7-11"></div>
+            <div class="gridSpaces" id="7-12"></div>
+            <div class="gridSpaces" id="8-1"></div>
+            <div class="gridSpaces" id="8-2"></div>
+            <div class="gridSpaces" id="8-3"></div>
+            <div class="gridSpaces" id="8-4"></div>
+            <div class="gridSpaces" id="8-5"></div>
+            <div class="gridSpaces" id="8-6"></div>
+            <div class="gridSpaces" id="8-7"></div>
+            <div class="gridSpaces" id="8-8"></div>
+            <div class="gridSpaces" id="8-9"></div>
+            <div class="gridSpaces" id="8-10"></div>
+            <div class="gridSpaces" id="8-11"></div>
+            <div class="gridSpaces" id="8-12"></div>
         </div>
-        <div id="right-bar">4</div>
+        <div id="right-bar">
+            <div id="villagersListedDiv"></div>
+            <button id="newVilBtn">New Villager</button>
+        </div>
         <div id="footer">
-            <h2 id="calendar">Week: 1</h2>
+            <h2 id="calendar">Week: 0</h2>
             <button id="nxtWeekBtn">Pass Week</button>
+            <button id="startBtn">Start</button>
         </div>
 
         <script src="../static/js/game.js"></script>
